--- a/GroceryApplication/test-output/emailable-report.html
+++ b/GroceryApplication/test-output/emailable-report.html
@@ -8,13 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,377</td><td></td><td></td></tr>
+<tr><th colspan="8">GroceryApplication</th></tr>
+<tr><td><a href="#t0">ChromeTest</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">26,640</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testCase.SubCategoryTest</td><td><a href="#m0">verifyDeleteSubCatgory</a></td><td rowspan="1">1729254234234</td><td rowspan="1">3287</td></tr><tr class="passedeven"><td><a href="#m1">verifyEditSubCategory</a></td><td rowspan="1">1729254242810</td><td rowspan="1">4173</td></tr><tr class="passedeven"><td><a href="#m2">verifyNewSubCategory</a></td><td rowspan="1">1729254251906</td><td rowspan="1">3112</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GroceryApplication</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">testCase.LoginPageTest</td><td><a href="#m0">verifyLoginWithInvalidData</a></td><td rowspan="3">1729492841013</td><td rowspan="3">617</td></tr><tr class="passedeven"><td><a href="#m1">verifyLoginWithInvalidData</a></td></tr><tr class="passedeven"><td><a href="#m2">verifyLoginWithInvalidData</a></td></tr><tr class="passedeven"><td><a href="#m3">verifyLoginWithValidData</a></td><td rowspan="1">1729492853904</td><td rowspan="1">1401</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testCase.SubCategoryTest#verifyDeleteSubCatgory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCase.SubCategoryTest#verifyEditSubCategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testCase.SubCategoryTest#verifyNewSubCategory</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ChromeTest</h2><h3 id="m0">testCase.LoginPageTest#verifyLoginWithInvalidData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>adminss</td><td>admin</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCase.LoginPageTest#verifyLoginWithInvalidData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>adminss</td><td>adminss</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCase.LoginPageTest#verifyLoginWithInvalidData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin</td><td>adminss</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCase.LoginPageTest#verifyLoginWithValidData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin</td><td>admin</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
