--- a/GroceryApplication/test-output/index.html
+++ b/GroceryApplication/test-output/index.html
@@ -118,7 +118,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginWithValidData(admin, admin)">verifyLoginWithValidData(admin, admin)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.LoginPageTest" class="method navigator-link" hash-for-method="verifyLoginWithValidData">verifyLoginWithValidData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-GroceryApplication -->
@@ -165,10 +165,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLoginWithValidData(admin, admin)">
-                  </a> <!-- verifyLoginWithValidData(admin, admin) -->
+                  <a name="verifyLoginWithValidData">
+                  </a> <!-- verifyLoginWithValidData -->
                   <span class="method-name">verifyLoginWithValidData</span>
-                  <span class="parameters">(admin,admin)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -230,24 +229,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithValidData')
 data.setCell(0, 2, 'testCase.LoginPageTest')
-data.setCell(0, 3, 1401);
+data.setCell(0, 3, 1946);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyLoginWithInvalidData')
 data.setCell(1, 2, 'testCase.LoginPageTest')
-data.setCell(1, 3, 843);
+data.setCell(1, 3, 936);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'verifyLoginWithInvalidData')
 data.setCell(2, 2, 'testCase.LoginPageTest')
-data.setCell(2, 3, 622);
+data.setCell(2, 3, 712);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'verifyLoginWithInvalidData')
 data.setCell(3, 2, 'testCase.LoginPageTest')
-data.setCell(3, 3, 617);
+data.setCell(3, 3, 426);
 window.suiteTableData['GroceryApplication']= { tableData: data, tableDiv: 'times-div-GroceryApplication'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 32 seconds</span>
               <div id="times-div-GroceryApplication">
               </div> <!-- times-div-GroceryApplication -->
             </div> <!-- times-div -->
@@ -280,31 +279,31 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithInvalidData(admin, adminss)</span>
-                <span class="method-start">5790 ms</span>
+                <span class="method-start">5991 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(Chrome)</span>
-                <span class="method-start">6415 ms</span>
+                <span class="method-start">6930 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithInvalidData(adminss, admin)</span>
-                <span class="method-start">12306 ms</span>
+                <span class="method-start">12661 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(Chrome)</span>
-                <span class="method-start">12924 ms</span>
+                <span class="method-start">13374 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithInvalidData(adminss, adminss)</span>
-                <span class="method-start">18265 ms</span>
+                <span class="method-start">22566 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(Chrome)</span>
-                <span class="method-start">19984 ms</span>
+                <span class="method-start">22995 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyLoginWithValidData(admin, admin)</span>
-                <span class="method-start">25197 ms</span>
+                <span class="method-name">verifyLoginWithValidData</span>
+                <span class="method-start">30837 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
