--- a/GroceryApplication/test-output/emailable-report.html
+++ b/GroceryApplication/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">GroceryApplication</th></tr>
-<tr><td><a href="#t0">ChromeTest</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,169</td><td></td><td></td></tr>
+<tr><td><a href="#t0">ChromeTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,575</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GroceryApplication</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testCase.ManageNewsPageTest</td><td><a href="#m0">addNewsInformation</a></td><td rowspan="1">1729604846871</td><td rowspan="1">2886</td></tr><tr class="passedeven"><td><a href="#m1">deleteNewsInformation</a></td><td rowspan="1">1729604854705</td><td rowspan="1">2902</td></tr><tr class="passedeven"><td><a href="#m2">editNewsInformation</a></td><td rowspan="1">1729604862714</td><td rowspan="1">2981</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GroceryApplication</th></tr></tbody><tbody id="t0"><tr><th colspan="4">ChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCase.CategoryPageTest</td><td><a href="#m0">checkForStatus</a></td><td rowspan="1">1729792843814</td><td rowspan="1">3146</td></tr></tbody>
 </table>
-<h2>ChromeTest</h2><h3 id="m0">testCase.ManageNewsPageTest#addNewsInformation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCase.ManageNewsPageTest#deleteNewsInformation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testCase.ManageNewsPageTest#editNewsInformation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ChromeTest</h2><h3 id="m0">testCase.CategoryPageTest#checkForStatus</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
