--- a/GroceryApplication/test-output/index.html
+++ b/GroceryApplication/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,7 @@
                     <div class="method-list-content passed suite-GroceryApplication">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.ManageNewsPageTest" class="method navigator-link" hash-for-method="addNewsInformation">addNewsInformation</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.ManageNewsPageTest" class="method navigator-link" hash-for-method="deleteNewsInformation">deleteNewsInformation</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.ManageNewsPageTest" class="method navigator-link" hash-for-method="editNewsInformation">editNewsInformation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-GroceryApplication" title="testCase.CategoryPageTest" class="method navigator-link" hash-for-method="checkForStatus">checkForStatus</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-GroceryApplication -->
@@ -131,28 +121,14 @@
           <div class="suite-GroceryApplication-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCase.ManageNewsPageTest</span>
+              <span class="class-name">testCase.CategoryPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addNewsInformation">
-                  </a> <!-- addNewsInformation -->
-                  <span class="method-name">addNewsInformation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="deleteNewsInformation">
-                  </a> <!-- deleteNewsInformation -->
-                  <span class="method-name">deleteNewsInformation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="editNewsInformation">
-                  </a> <!-- editNewsInformation -->
-                  <span class="method-name">editNewsInformation</span>
+                  <a name="checkForStatus">
+                  </a> <!-- checkForStatus -->
+                  <span class="method-name">checkForStatus</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -167,10 +143,13 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;GroceryApplication&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;utilities.ExtenetReport&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;ChromeTest&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCase.ManageNewsPageTest&quot;/&gt;
+      &lt;class name=&quot;testCase.CategoryPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ChromeTest --&gt;
 &lt;/suite&gt; &lt;!-- GroceryApplication --&gt;
@@ -210,24 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'editNewsInformation')
-data.setCell(0, 2, 'testCase.ManageNewsPageTest')
-data.setCell(0, 3, 2981);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'deleteNewsInformation')
-data.setCell(1, 2, 'testCase.ManageNewsPageTest')
-data.setCell(1, 3, 2902);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'addNewsInformation')
-data.setCell(2, 2, 'testCase.ManageNewsPageTest')
-data.setCell(2, 3, 2886);
+data.setCell(0, 1, 'checkForStatus')
+data.setCell(0, 2, 'testCase.CategoryPageTest')
+data.setCell(0, 3, 3146);
 window.suiteTableData['GroceryApplication']= { tableData: data, tableDiv: 'times-div-GroceryApplication'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-GroceryApplication">
               </div> <!-- times-div-GroceryApplication -->
             </div> <!-- times-div -->
@@ -242,9 +213,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-GroceryApplication" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">testCase.CategoryPageTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">EditNewCategory</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-GroceryApplication" class="panel">
@@ -253,42 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCase.ManageNewsPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCase.CategoryPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">addNewsInformation</span>
-                <span class="method-start">5303 ms</span>
+                <span class="method-name">checkForStatus</span>
+                <span class="method-start">7150 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethode([TestResult name=addNewsInformation status=SUCCESS method=ManageNewsPageTest.addNewsInformation()[pr...)</span>
-                <span class="method-start">8192 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod(Chrome)</span>
-                <span class="method-start">8196 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">deleteNewsInformation</span>
-                <span class="method-start">13137 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethode([TestResult name=deleteNewsInformation status=SUCCESS method=ManageNewsPageTest.deleteNewsInformatio...)</span>
-                <span class="method-start">16040 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod(Chrome)</span>
-                <span class="method-start">16042 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">editNewsInformation</span>
-                <span class="method-start">21146 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethode([TestResult name=editNewsInformation status=SUCCESS method=ManageNewsPageTest.editNewsInformation()[...)</span>
-                <span class="method-start">24128 ms</span>
+                <span class="method-name">afterMethode([TestResult name=checkForStatus status=SUCCESS method=CategoryPageTest.checkForStatus()[pri:0, insta...)</span>
+                <span class="method-start">10316 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
